# p3data

./: .gitignore  Makefile  README.md  cleaning.html  cleaning.ipynb  conda_env.txt  exploration.html  exploration.ipynb  pyproject.toml  requirements.txt  slide_deck.ipynb  slide_deck.slides.html  wrangle.ipynb
data/: grantee.feather  grants.feather  person.feather  project.feather
docs/: cleaning.html  exploration.html  index.html
notebooks/: cleaning.ipynb  exploration.ipynb  slide_deck.ipynb
src/p3data/: downloader.py
tests/: test_p3data.py
