[tool.poetry]
name = "p3data"
version = "0.1.0"
description = "Cleaning, exploring, and explaining SNSF public data with the PyData stack."
license = "MIT"
homepage = "https://github.com/zambujo/p3data"
repository = "https://github.com/zambujo/p3data"
keywords = ["cleaning-data", "switzerland", "open-datasets"]
authors = ["Martins <joao.martins@gmx.net>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
seaborn = "^0.11.0"
requests = "^2.24.0"
feather-format = "^0.4.1"
SQLAlchemy = "^1.3.19"
jupyterlab = "^2.2.8"
jupyterlab-git = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
